<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Broobu Hamdroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_search">Go!</string>
    <string name="searchText">Enter Callsign</string>
    <string name="searchButton">Go!</string>
    <string name="descrImage">Station Image</string>
    <string name="txtCallSign">ON8RL</string>
    <string name="txtDisplayName"></string>
    <string name="lblLocation">QTH</string>
    <string name="txtLon"></string>
    <string name="txtLat"></string>
    <string name="lblGrid">Grid</string>
    <string name="txtGrid"></string>
    <string name="lblShortPath">Short Path</string>
    <string name="txtShortPath"></string>
    <string name="lblLongPath">Long Path</string>
    <string name="txtLongPath"></string>
    <string name="lblBearing">Bearing</string>
    <string name="txtBearing"></string>
    <string name="txtCountryCity"></string>
    <string name="imgStation">Station Image</string>
    <string name="action_bio">Show Bio</string>
    <string name="action_map">Show on Map</string>
    <string name="lblLongitude">QTH Lon.</string>
    <string name="lblLatitude">QTH Lat.</string>
    <string name="txtYourTime">15:12:32</string>
    <string name="txtYourCountry">United Kingdom</string>
    <string name="txtYourAltitude"></string>
    <string name="txtYourLongitude"></string>
    <string name="txtYourLatitude"></string>
    <string name="txtYourDateTime"></string>
    <string name="txtYourBearing"></string>
    <string name="txtYourSpeed"></string>
    <string name="txtYourGrid"></string>
    <string name="lblYourInfo">YOUR LOCATION</string>
    <string name="lblYourGrid">Grid</string>
    <string name="lblYourQth">QTH Lon.</string>
    <string name="lblYourQthLon">QTH Lon.</string>
    <string name="lblYourQthLat">QTH Lat.</string>
    <string name="lblYourAltitude">Altitude</string>
    <string name="lblYourBearing">Bearing</string>
    <string name="lblYourSpeed">Speed</string>
    <string name="lblYourLocation">Location</string>
    <string name="lblYourDynamics">Dynamics</string>
    <string name="hamdroidsentry">http://www.broobu.com/services/business.hamradio/hamdroid</string>
    <string name="search_hint">Enter Call Sign</string>
    <string name="pref_GPS">GPS</string>
    <string name="pref_station_info">Station Info Preferences</string>
    <string name="measurements">Preferred unit of measurement</string>
    <string name="pref_title_Measurement">Preferred Unit of Measurement</string>
    <string name="title_activity_tab">Modules</string>
    <string name="title_current_location">Current Location</string>
    <string name="title_qrz_lookup">QRZ Lookup</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_nav">Broobu HAMdroid v1.1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lblStationInfo">Station Info</string>
    <string name="lblMapView">Map</string>
    <string name="lblPicture">Picture</string>
    <string name="lblHomePage">Home Page</string>
    <string name="title_about">About</string>
    <string name="capDev">Your Location</string>
    <string name="capQRZ">QRZ Lookup</string>
    <string name="capSplash">About</string>

</resources>
