<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:name=".DeviceFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/capDev"
        android:text="@string/capDev"
        android:gravity="center_horizontal"
        android:background="@drawable/abc_cab_background_top_holo_dark"
        android:paddingBottom="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/capDev"
        android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deviceRow1"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/txtYourDateTime"
            android:text="@string/txtYourDateTime"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffac08"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/deviceRow1"
        android:id="@+id/deviceRow2">
        <TextView
            android:id="@+id/lblYourLocation"
            android:text="@string/lblYourLocation"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:visibility="visible"
            android:textColor="#ffac08"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/deviceRow2"
        android:id="@+id/deviceRow3">
        <TextView
            android:id="@+id/lblYourGrid"
            android:text="@string/lblYourGrid"
            android:layout_alignParentLeft="true"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtYourGrid"
            android:text="@string/txtYourGrid"
            android:layout_alignParentRight="true"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:textColor="#fdff06"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow4"
        android:layout_below="@+id/deviceRow3">
        <TextView
            android:id="@+id/lblYourQthLon"
            android:text="@string/lblYourQthLon"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtYourLongitude"
            android:layout_alignParentRight="true"
            android:text="@string/txtYourLongitude"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="#fdff06"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow5"
        android:layout_below="@+id/deviceRow4">
        <TextView
            android:id="@+id/lblYourQthLat"
            android:text="@string/lblYourQthLat"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtYourLatitude"
            android:text="@string/txtYourLatitude"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:textColor="#fdff06"
            android:layout_marginLeft="8dp"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow6"
        android:layout_below="@+id/deviceRow5">
        <TextView
            android:id="@+id/lblYourAltitude"
            android:text="@string/lblYourAltitude"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtYourAltitude"
            android:text="@string/txtYourAltitude"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:textColor="#fdff06"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow7"
        android:layout_below="@+id/deviceRow6">
        <TextView
            android:id="@+id/lblYourDynamics"
            android:text="@string/lblYourDynamics"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="8dp"
            android:textColor="#ffac08"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow8"
        android:layout_below="@+id/deviceRow7">
        <TextView
            android:id="@+id/lblBearing"
            android:text="@string/lblYourBearing"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtYourBearing"
            android:text="@string/txtYourBearing"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="8dp"
            android:textColor="#fdff06"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deviceRow9"
        android:layout_below="@+id/deviceRow8">
        <TextView
            android:id="@+id/lblYourSpeed"
            android:text="@string/lblYourSpeed"
            android:textIsSelectable="false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtYourSpeed"
            android:text="@string/txtYourSpeed"
            android:textIsSelectable="false"
            android:layout_alignParentRight="true"
            android:textColor="#fdff06"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"         />
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
